--- a/index.html
+++ b/index.html
@@ -25,13 +25,30 @@
 
 </header>
     <main>
-  <p style =" display: inline-block;
+ 
+
+  <ul style =" display: inline-block;
   color:teal;
   background-color:violet; padding: 8px;">
-    i am haneen i am student and that's my second year in software engineering, i have knowledge in java programming,
-    now i am learning web development and I strive to make the best effort to develop my capabilities 
-    to reach the best positions by operating my skills
- </p>
+  <li> i am haneen i am student and that's my second year in software engineering</li>
+  <li> i have knowledge in java programming,<li>
+  <li> i am learning web development and I strive to make the best effort to develop my capabilities 
+    to reach the best positions by operating my skills</li>
+     </ul>
+ <ol>
+  <h3> top 10 movies </h3>
+
+   <li>Parasite</li>
+   <li>Train to Busan </li>
+   <li>Burning</li>
+   <li>The Host</li>
+   <li>A Taxi Driver</li>
+   <li>Poetry</li>
+   <li>Okja</li>
+   <li>Mother </li>
+   <li>Train to Busan</li>
+   <li>The Call</li>
+   </ol>
 
 
 </main>
