--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <main>
  
 
-  <ul style =" display: inline-block;
-  color:teal;
-  background-color:violet; padding: 8px;">
+  <ul style ="color:teal;
+  background-color:violet; padding: 8px; list-style: square inside url(sqrpurple);">
   <li> i am haneen i am student and that's my second year in software engineering</li>
-  <li> i have knowledge in java programming,<li>
+  <li> i have knowledge in java programming,</li>
   <li> i am learning web development and I strive to make the best effort to develop my capabilities 
     to reach the best positions by operating my skills</li>
      </ul>
- <ol>
+
+ <ol style ="background-color:rgb(99, 91, 99);">
   <h3> top 10 movies </h3>
 
    <li>Parasite</li>
