--- a/index.html
+++ b/index.html
@@ -9,34 +9,29 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body style="background-color: wheat;">
+<body>
     <header>
         <ul>
-            <li>
-              <a href ="#">home</a>
-            </li>
-            <li>
-              <a href="#">contact us</a>
-            </li>
-            <li>
-              <a href="#">about us</a>
+            <li><a href ="#">home</a></li>
+            <li><a href="#">contact us</a></li>
+            <li><a href="#">about us</a>
             </li>
           </ul>
-        </nav>
+
 
 </header>
-    <main>
- 
 
-  <ul style ="color:teal;
-  background-color:violet; padding: 8px; list-style: square inside url(sqrpurple);">
+  <main>
+    <div style="background-color: aqua;">
+  <ul id = "unorded">
   <li> i am haneen i am student and that's my second year in software engineering</li>
-  <li> i have knowledge in java programming,</li>
+  <li> i have knowledge in java programming</li>
   <li> i am learning web development and I strive to make the best effort to develop my capabilities 
     to reach the best positions by operating my skills</li>
-     </ul>
-
- <ol style ="background-color:rgb(99, 91, 99);">
+  </ul>
+  </div>
+ 
+  <ol>
   <h3> top 10 movies </h3>
 
    <li>Parasite</li>
@@ -50,10 +45,11 @@
    <li>Train to Busan</li>
    <li>The Call</li>
    </ol>
+   
 
 
 </main>
-<footer style="background-color:blueviolet; text-align: center;" > &copy; haneen jaradeh</footer>
+<footer> &copy; haneen jaradeh</footer>
 <script src="js/app.js"></script>
 </body>
 </html>
