--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+  
 
 </head>
 <body>
@@ -15,21 +15,24 @@
             <li><a href ="#">home</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">about us</a>
+            <li><a href="#">more</a>
             </li>
           </ul>
+          
 
 
 </header>
 
   <main>
-    <div style="background-color: aqua;">
+  <h1>welcome to my website</h1>
+     <div>
   <ul id = "unorded">
   <li> i am haneen i am student and that's my second year in software engineering</li>
   <li> i have knowledge in java programming</li>
   <li> i am learning web development and I strive to make the best effort to develop my capabilities 
     to reach the best positions by operating my skills</li>
   </ul>
-  </div>
+  </div> 
  
   <ol>
   <h3> top 10 movies </h3>
@@ -45,6 +48,8 @@
    <li>Train to Busan</li>
    <li>The Call</li>
    </ol>
+
+
    
 
 
